@@ -65,6 +65,7 @@
             NOTE: Please refer to the migration notes!
     * 1117 agent_vsphere: now able to query license information from esx system...
     * 1118 bluecat_dns, bluecat_dhcp: no able to run as clustered checks...
+    * 1409 Extended Check_MK-API: check function may return None...
     * 1051 FIX: tcp_conn_stats: fix missing performance data...
     * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
     * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
